Date:   Mon Feb 3 13:08:00 2025 +0000
    PAY-6995: HTTP 400 errors with GET /Refund endpoint
        [PAY-6995] (https://tools.hmcts.net/jira/browse/PAY-6995).